<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/transparentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:alpha="0.9"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvInterTrip"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:padding="10dp"
        android:text="@string/label_dot_trip_insp"
        android:textColor="@color/fabMenuColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvInterTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvPostTrip"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:padding="10dp"
        android:text="@string/label_inter_trip_insp"
        android:textColor="@color/fabMenuColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvPostTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvPreTrip"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:padding="10dp"
        android:text="@string/label_post_trip_insp"
        android:textColor="@color/fabMenuColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvPreTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fabNew"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:padding="10dp"
        android:text="@string/label_pre_trip_insp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/fabMenuColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/fabMenuColor"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:visibility="visible"
        app:backgroundTint="@color/fabMenuColor"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_add_white_24dp"
        android:contentDescription="@string/floating_button" />

</RelativeLayout>