<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

    <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:text="@string/choose_date_time"
            android:textSize="@dimen/dialogTitleSize"
            android:textStyle="bold" />

    <ScrollView
            android:id="@+id/dateTimeScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dateTimeScrollMargin"
            android:layout_weight="1">

        <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/date_time_picker_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dateTimePickerGap"
                app:alignContent="center"
                app:alignItems="center"
                app:flexWrap="wrap"
                app:justifyContent="center">

            <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/datePickerMargin" />

            <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/timePickerMargin" />

        </com.google.android.flexbox.FlexboxLayout>
    </ScrollView>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/clearButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:gravity="end">

            <Button
                android:id="@+id/cancelButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/okButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_text" />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>
