<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_bar_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:visibility="gone"
    android:background="@drawable/search_bar_background"
    android:padding="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="@dimen/searchBarIconSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="@dimen/searchBarIconSize"
        android:padding="4dp"
        android:src="@drawable/ic_baseline_search_24"
        android:contentDescription="@string/search" />

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/type_to_search"
        android:textColor="@color/textColor"
        android:textColorHint="@color/search_bar_hint_color"
        android:inputType="text|textNoSuggestions"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/clearSearch"
        app:layout_constraintStart_toEndOf="@+id/ivSearch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/clearSearch"
        android:layout_width="@dimen/searchBarIconSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="@dimen/searchBarIconSize"
        android:padding="4dp"
        app:layout_constraintWidth_percent="0.1"
        android:src="@drawable/ic_baseline_clear_24"
        android:contentDescription="@string/clear_search" />

</androidx.constraintlayout.widget.ConstraintLayout>